--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.241 $
+    $Revision: 1.249 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -333,5 +333,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.241 2007/12/31 13:39:02 gilles Exp gilles $
+    $Id: imapsync,v 1.249 2008/03/19 02:14:24 gilles Exp $
 
