--- a/TODO
+++ b/TODO
@@ -1,6 +1,13 @@
 TODO file for imapsync
 ----------------------
 
+Make "--delete 2" be a fatal error.
+
+Start an imap internet scan project.
+
+Explain howto change only the header with --regexmess
+
+Start a wiki for imapsync.
 
 Add a --pidfile option.
 Add a --tmpfile  option.
