--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,50 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.241
+head: 1.249
 branch:
 locks: strict
-	gilles: 1.241
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 241;	selected revisions: 241
+total revisions: 249;	selected revisions: 249
 description:
 ----------------------------
-revision 1.241	locked by: gilles;
+revision 1.249
+date: 2008/03/19 02:14:24;  author: gilles;  state: Exp;  lines: +7 -7
+warn about BUG_IMAPClient_3.xx
+----------------------------
+revision 1.248
+date: 2008/03/19 02:05:46;  author: gilles;  state: Exp;  lines: +14 -19
+Cleaned check_lib_version()
+----------------------------
+revision 1.247
+date: 2008/03/19 01:41:49;  author: gilles;  state: Exp;  lines: +1 -1
+Added id in output warn when no header found.
+----------------------------
+revision 1.246
+date: 2008/03/19 01:07:26;  author: gilles;  state: Exp;  lines: +19 -16
+Removed $^W use.
+----------------------------
+revision 1.245
+date: 2008/03/10 23:49:42;  author: gilles;  state: Exp;  lines: +53 -23
+Back to append_string()
+Turn on --syncinternaldates by default
+Date_Init("TZ=GMT") if no timezone (windows) set.
+----------------------------
+revision 1.244
+date: 2008/02/29 22:43:22;  author: gilles;  state: Exp;  lines: +5 -545
+Removed old *_2() functions (unused)
+----------------------------
+revision 1.243
+date: 2008/02/29 16:47:58;  author: gilles;  state: Exp;  lines: +632 -53
+Moved functins *_2() into override_imapclient()
+----------------------------
+revision 1.242
+date: 2008/02/29 00:28:15;  author: gilles;  state: Exp;  lines: +24 -13
+Ignore message when it has no header.
+----------------------------
+revision 1.241
 date: 2007/12/31 13:39:02;  author: gilles;  state: Exp;  lines: +6 -6
 Bug fix. --exclude and remove_from_requested_folders()
 ----------------------------
