--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.12 2007/10/30 00:49:03 gilles Exp gilles $
+# $Id: INSTALL,v 1.13 2008/03/19 00:28:36 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -42,12 +42,14 @@ Here is some individual module help:
 
   perl -mMail::IMAPClient -e 'print $Mail::IMAPClient::VERSION, "\n"'
 
+  New Mail-IMAPClient-3.xx doesn't work with imapsync for the moment.
+
 - Perl Digest::MD5 module. 
   http://search.cpan.org/
-  http://search.cpan.org/~gaas/Digest-MD5-2.33/
+  http://search.cpan.org/~gaas/Digest-MD5-2.36/
   To know the version you have on your system try :
   perl -mDigest::MD5 -e 'print $Digest::MD5::VERSION, "\n"'
-  I use 2.20 (debian package)
+  I use 2.36 (debian etch package)
 
 - Term::ReadKey
   perl -mTerm::ReadKey -e ''
@@ -94,7 +96,7 @@ titi@est.belle with a password located in the file /var/tmp/secret2
 
 Of course, you can change the file tests.sh and run the tests with :
 
-sh tests.sh
+sh -x tests.sh
 
 The tests.sh script break on first failure ("set -e" directive).
 
