--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.239
+head: 1.241
 branch:
 locks: strict
+	gilles: 1.241
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 239;	selected revisions: 239
+total revisions: 241;	selected revisions: 241
 description:
+----------------------------
+revision 1.241	locked by: gilles;
+date: 2007/12/31 13:39:02;  author: gilles;  state: Exp;  lines: +6 -6
+Bug fix. --exclude and remove_from_requested_folders()
+----------------------------
+revision 1.240
+date: 2007/12/31 13:35:59;  author: gilles;  state: Exp;  lines: +7 -6
+MDaemon 8.0.2
 ----------------------------
 revision 1.239
 date: 2007/12/29 02:44:10;  author: gilles;  state: Exp;  lines: +7 -7
