--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.239 $
+    $Revision: 1.241 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -244,7 +244,7 @@ IMAP SERVERS
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12
-     - MDaemon 7.0.1, 8.1, 9.5.4 (Windows server 2003 R2 platform)
+     - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform)
      - Mercury 4.1 (Windows server 2000 platform)
      - Microsoft Exchange Server 5.5, 6.5.7638.1 [dest]
      - Netscape Mail Server 3.6 (Wintel !)
@@ -328,9 +328,10 @@ SIMILAR SOFTWARES
       migrationtool : http://sourceforge.net/projects/migrationtool/
       imapmigrate   : http://sourceforge.net/projects/cyrus-utils/
       wonko_imapsync: http://wonko.com/article/554
+                      see also tools/wonko_ruby_imapsync
       pop2imap      : http://www.linux-france.org/prj/pop2imap/
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.239 2007/12/29 02:44:10 gilles Exp $
+    $Id: imapsync,v 1.241 2007/12/31 13:39:02 gilles Exp gilles $
 
