--- a/TODO
+++ b/TODO
@@ -1,6 +1,27 @@
 TODO file for imapsync
 ----------------------
 
+
+Add a --pidfile option.
+Add a --tmpfile  option.
+Write a clean_exit() replacing each die() or exit() call.
+Add a --skipheaderinfolder option 
+See the code patches/imapsync_Cvitkovich_pidfile_tmpfile
+Make --skipheader be multiple
+
+
+
+Fix this:
+> - Erreur avec la traditionnelle différence entre Windows
+> et LInux sur les retour-chariots : le calcul de la
+> longueur du message ou des entêtes à envoyer au serveur
+> cible n'est pas bon sur une machine Windows.
+> Ci-dessous la modif :
+> 
+>         # No NL Count on Windows my $length = ( -s $file ) + $bare_nl_count;
+>         my $length = ( -s $file );
+
+
 Normally, "no header used or found" means imapsync found a message
 with no header. It may be a bad message with really no header
 or it may be a imap server problem, the server gives no header
