--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,25 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.250
+head: 1.252
 branch:
 locks: strict
-	gilles: 1.250
+	gilles: 1.252
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 250;	selected revisions: 250
+total revisions: 252;	selected revisions: 252
 description:
 ----------------------------
-revision 1.250	locked by: gilles;
+revision 1.252	locked by: gilles;
+date: 2008/05/08 02:30:17;  author: gilles;  state: Exp;  lines: +36 -6
+Added mailing list information.
+----------------------------
+revision 1.251
+date: 2008/05/08 02:08:44;  author: gilles;  state: Exp;  lines: +56 -14
+Fixed message_string returning empty message when < expected size.
+----------------------------
+revision 1.250
 date: 2008/04/21 03:46:01;  author: gilles;  state: Exp;  lines: +11 -7
 Bug fix "parse_headers want an ARRAY ref"
 ----------------------------
