--- a/FAQ
+++ b/FAQ
@@ -87,6 +87,11 @@ c) Use the script learn/adjust_time.pl to change the internal dates
    from the "Date:" header.
 
 =======================================================================
+Q. The option --subscribe does not seem to work
+
+R. Use it with --subscribed
+
+=======================================================================
 Q. Does imapsync retain the \Answered and $Forwarded flags?
 
 R. imapsync retains all flags except \Recent 
@@ -549,7 +554,7 @@ R. GroupWise 7 seems buggy. Apply GroupWise 7 support pack 1
 Q. Migrating from David Tobit V8
 
 R. Use the following options :
-imapsync ... --prefix1 INBOX. --sep1 / --subscribe
+imapsync ... --prefix1 INBOX. --sep1 / --subscribe --subscribed 
 
 =======================================================================
 Q. I need to migrate 1250 mailboxes from one cyrus-IMAP server to another
