--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.250 $
+    $Revision: 1.252 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -175,9 +175,36 @@ LICENSE
     General Public License. See the GPL file included in the distribution or
     the web site http://www.gnu.org/licenses/licenses.html
 
+MAILING-LIST
+    Here is the welcome message:
+
+    Welcome on the imapsync mailing-list.
+
+    This list is dedicated to the users of imapsync
+    http://www.linux-france.org/prj/imapsync/
+
+    To write on the list, the address is: mailto:imapsync@linux-france.org
+
+    To unsubscribe, send a message to:
+    mailto:imapsync-unsubscribe@listes.linux-france.org
+
+    To subscribe, send a message to:
+    mailto:imapsync-subscribe@listes.linux-france.org
+
+    To contact the person in charge for the list:
+    mailto:imapsync-request@listes.linux-france.org
+
+    The list archives may be available at:
+    http://www.linux-france.org/prj/imapsync_list/ So consider that the list
+    is public, anyone can see your post. Use a pseudonym or do not post to
+    this list if you want to stay private.
+
+    Thank you for your participation.
+
 BUGS
-    No known serious bug. Report any bug to the author. Before reporting
-    bugs, read the FAQ, this README and the TODO files.
+    No known serious bug. Report any bug or feature request to the author or
+    the mailing-list. Before reporting bugs, read the FAQ, this README and
+    the TODO files.
 
     Don't write imapsync in uppercase in the email title, I'll know you run
     windows.
@@ -333,5 +360,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.250 2008/04/21 03:46:01 gilles Exp gilles $
+    $Id: imapsync,v 1.252 2008/05/08 02:30:17 gilles Exp gilles $
 
