--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.249
+head: 1.250
 branch:
 locks: strict
+	gilles: 1.250
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 249;	selected revisions: 249
+total revisions: 250;	selected revisions: 250
 description:
+----------------------------
+revision 1.250	locked by: gilles;
+date: 2008/04/21 03:46:01;  author: gilles;  state: Exp;  lines: +11 -7
+Bug fix "parse_headers want an ARRAY ref"
 ----------------------------
 revision 1.249
 date: 2008/03/19 02:14:24;  author: gilles;  state: Exp;  lines: +7 -7
