--- a/README
+++ b/README
@@ -3,14 +3,14 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.249 $
+    $Revision: 1.250 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
      imapsync works fine under Windows 2000 (at least) and ActiveState's 5.8 Perl
 
      imapsync is already available directly on the following distributions (at least):
-     FreeBSD, Debian, Ubuntu, Gentoo, NetBSD, Darwin, Mandriva.
+     FreeBSD, Debian, Ubuntu, Gentoo, NetBSD, Darwin, Mandriva and OpenBSD (yeah!).
 
      Get imapsync at
      http://www.linux-france.org/prj/imapsync/dist/
@@ -333,5 +333,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.249 2008/03/19 02:14:24 gilles Exp $
+    $Id: imapsync,v 1.250 2008/04/21 03:46:01 gilles Exp gilles $
 
