--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 TODO file for imapsync
 ----------------------
 
+
+Add NOOP commands to avoid timeouts.
+
 Make "--delete 2" be a fatal error.
 
 Start an imap internet scan project.
