--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,32 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.252
+head: 1.255
 branch:
 locks: strict
-	gilles: 1.252
+	gilles: 1.255
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 252;	selected revisions: 252
+total revisions: 255;	selected revisions: 255
 description:
 ----------------------------
-revision 1.252	locked by: gilles;
+revision 1.255	locked by: gilles;
+date: 2008/06/24 16:38:49;  author: gilles;  state: Exp;  lines: +7 -6
+Domino (Notes) 4.61
+----------------------------
+revision 1.254
+date: 2008/06/16 18:59:26;  author: gilles;  state: Exp;  lines: +19 -13
+Some server (Microsoft Exchange 6.0.6249.0 for example)
+returns message size a lot
+s than the real size
+Now imapsync accept this silly behavior.
+----------------------------
+revision 1.253
+date: 2008/06/16 18:48:01;  author: gilles;  state: Exp;  lines: +6 -6
+Archiveopteryx  2.09
+----------------------------
+revision 1.252
 date: 2008/05/08 02:30:17;  author: gilles;  state: Exp;  lines: +36 -6
 Added mailing list information.
 ----------------------------
