--- a/FAQ
+++ b/FAQ
@@ -331,6 +331,27 @@ But if the source folder is empty (not deleted) and
 options --delete2 --expunge2 are used then 
 the destination folder will be empty.
 
+======================================================================
+Q. Is it possible to synchronize all messages from one server to 
+another whithout recreating the folder structure and the target server.
+
+R. Yes.
+1) First try (safe mode):
+
+imapsync \
+ ...
+ --regextrans2 's/(.*)/INBOX/' \
+ --dry --justfolders
+
+2) See if the output says everything you want imapsync to do, 
+   --dry option is safe and does nothing real.
+   
+3) Remove --dry 
+   Check the imap folder tree on the target side, you should
+   only have one : the classical INBOX.
+
+4) Remove --justfolders
+
 
 ======================================================================
 Q. I have moved from Braunschweig to Graz, so I would like to have my whole 
