--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 TODO file for imapsync
 ----------------------
 
+Fix bug "not possible to use space in the imap password"
+
 Add kerberos authentification
 
 Add NOOP commands to avoid timeouts.
