--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.252 $
+    $Revision: 1.255 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -245,7 +245,7 @@ IMAP SERVERS
     Success stories reported with the following 35 imap servers (softwares
     names are in alphabetic order) :
 
-     - Archiveopteryx 2.03, 2.04 (OSL 3.0) http://www.archiveopteryx.org/
+     - Archiveopteryx 2.03, 2.04, 2.09 (OSL 3.0) http://www.archiveopteryx.org/
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
      - CommuniGatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8, 3.0.3, 4.1.1 (GPL) 
@@ -258,6 +258,7 @@ IMAP SERVERS
        v2.2.12-Invoca-RPM-2.2.12-3.RHEL4.1,
        2.2.13,
        v2.3.1-Invoca-RPM-2.3.1-2.7.fc5,
+       v2.3.7,
        (http://asg.web.cmu.edu/cyrus/)
      - David Tobit V8 (proprietary Message system).
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
@@ -265,7 +266,7 @@ IMAP SERVERS
      - Deerfield VisNetic MailServer 5.8.6 [from]
      - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7, 
        1.0.0 [dest] (LGPL) (http://www.dovecot.org/)
-     - Domino (Notes) 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 7.0.1 [from]
+     - Domino (Notes) 4.61[from], 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 7.0.1 [from]
      - Eudora WorldMail v2
      - GMX IMAP4 StreamProxy.
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
@@ -273,7 +274,7 @@ IMAP SERVERS
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1, 8.0.2, 8.1, 9.5.4 (Windows server 2003 R2 platform)
      - Mercury 4.1 (Windows server 2000 platform)
-     - Microsoft Exchange Server 5.5, 6.5.7638.1 [dest]
+     - Microsoft Exchange Server 5.5, 6.0.6249.0[from], 6.5.7638.1 [dest]
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
      - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
@@ -360,5 +361,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.252 2008/05/08 02:30:17 gilles Exp gilles $
+    $Id: imapsync,v 1.255 2008/06/24 16:38:49 gilles Exp gilles $
 
