--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,46 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.255
+head: 1.260
 branch:
 locks: strict
-	gilles: 1.255
+	gilles: 1.260
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 255;	selected revisions: 255
+total revisions: 260;	selected revisions: 260
 description:
 ----------------------------
-revision 1.255	locked by: gilles;
+revision 1.260	locked by: gilles;
+date: 2008/08/13 03:14:14;  author: gilles;  state: Exp;  lines: +54 -13
+- Added option --idatefromheader :
+  sets the internal dates on host2 same as the "Date:" headers.
+----------------------------
+revision 1.259
+date: 2008/08/13 01:22:10;  author: gilles;  state: Exp;  lines: +49 -21
+- Made a function for regexmess() --regexmess to be able to
+  check it easily
+- Added function tests_regexmess() to check regexmess(), 3
+  tests.
+- Removed imapsync copyleft GPL licence output (boring).
+  Replaced by wishlist link.
+- Added thank_author() to avoid duplicate code about thanks.
+- Better bug report documentation.
+----------------------------
+revision 1.258
+date: 2008/07/28 21:38:36;  author: gilles;  state: Exp;  lines: +18 -18
+Change report bug information order.
+----------------------------
+revision 1.257
+date: 2008/07/28 21:17:56;  author: gilles;  state: Exp;  lines: +10 -19
+removed comment and ugly output
+----------------------------
+revision 1.256
+date: 2008/06/29 01:28:51;  author: gilles;  state: Exp;  lines: +14 -5
+Applied patch from Simon Heimlicher to avoid non-selectable
+folders.
+----------------------------
+revision 1.255
 date: 2008/06/24 16:38:49;  author: gilles;  state: Exp;  lines: +7 -6
 Domino (Notes) 4.61
 ----------------------------
