--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.255 $
+    $Revision: 1.260 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -53,6 +53,7 @@ SYNOPSIS
                [--sep2 <char>]
                [--justfolders] [--justfoldersizes] [--justconnect]
                [--syncinternaldates]
+               [--idatefromheader]
                [--buffersize  <int>]
                [--syncacls]
                [--regexmess <regex>] [--regexmess <regex>]
@@ -201,37 +202,38 @@ MAILING-LIST
 
     Thank you for your participation.
 
-BUGS
-    No known serious bug. Report any bug or feature request to the author or
-    the mailing-list. Before reporting bugs, read the FAQ, this README and
-    the TODO files.
+BUGS and BUG REPORT
+    No known serious bug.
+
+    Report any bug or feature request to the author or the mailing-list.
+
+    Before reporting bugs, read the FAQ, this README and the TODO files.
 
     Don't write imapsync in uppercase in the email title, I'll know you run
-    windows.
+    windows and you haven't read the README yet.
 
     Make a good title, not just "imapsync" or "problem", a good title is
     made of keywords summary, not too long (one visible line).
 
-    In your report, please include:
+    Before reporting bugs, read the FAQ, this README and the TODO files.
+    http://www.linux-france.org/prj/imapsync/
+
+    Help me to help you: in your report, please include:
 
      - imapsync version.
-     - IMAPClient.pm version.
-     - perl version.
+     - output given with --debug --debugimap near the failure point.
      - operating system running imapsync.
-     - imap servers softwares on both side and their version.
+     - imap servers softwares on both side and their version number.
+     - imapsync with all the options you use,  the full command line
+       you use (except the passwords of course). 
+     - IMAPClient.pm version.
 
-     Those values can be found with the command line
-
-     imapsync --host1 imap.host1.net  --host2 imap.host2.org  --justconnect
+     Those values can be found as a copy/paste at the begining of the output.
 
      And also, if it can help :
 
      - operating systems on both sides and the third side in case
        you run imapsync on a foreign host from the both.
-     - imapsync with all the options you use,  the full command line
-       you use (except the passwords of course). This can be found
-       at the beginning of the output.
-     - output given with --debug --debugimap near the failure point.
 
 IMAP SERVERS
     Failure stories reported with the following 4 imap servers :
@@ -245,7 +247,8 @@ IMAP SERVERS
     Success stories reported with the following 35 imap servers (softwares
     names are in alphabetic order) :
 
-     - Archiveopteryx 2.03, 2.04, 2.09 (OSL 3.0) http://www.archiveopteryx.org/
+     - Archiveopteryx 2.03, 2.04, 2.09, 2.10 [dest]
+       (OSL 3.0) http://www.archiveopteryx.org/
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
      - CommuniGatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8, 3.0.3, 4.1.1 (GPL) 
@@ -295,7 +298,7 @@ IMAP SERVERS
      - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 5.5.
 
     Please report to the author any success or bad story with imapsync and
-    don't forget to mention the IMAP server software names and version on
+    do not forget to mention the IMAP server software names and version on
     both sides. This will help future users. To help the author maintaining
     this section report the two lines at the begining of the output if they
     are useful to know the softwares. Example:
@@ -361,5 +364,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.255 2008/06/24 16:38:49 gilles Exp gilles $
+    $Id: imapsync,v 1.260 2008/08/13 03:14:14 gilles Exp gilles $
 
