--- a/TODO
+++ b/TODO
@@ -1,6 +1,20 @@
 TODO file for imapsync
 ----------------------
 
+Write to zimbra coders about the date presentation:
+Sorting by default by internal date is bad  with migrations
+and delays arrivals. An option would be good.
+
+Fix --ssl --justconnect bug 
+
+Fix --ssl need --authmech login with gmail. Why? 
+
+Add an option to implement the faq entry about copying a contact folder.
+
+imapsync doesn't report well. It should says "I had
+to sync 123 messages but I could transfer only 99 messages"
+
+
 Fix bug "not possible to use space in the imap password"
 
 Add kerberos authentification
