--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.260
+head: 1.261
 branch:
 locks: strict
-	gilles: 1.260
+	gilles: 1.261
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 260;	selected revisions: 260
+total revisions: 261;	selected revisions: 261
 description:
 ----------------------------
-revision 1.260	locked by: gilles;
+revision 1.261	locked by: gilles;
+date: 2008/08/16 15:56:00;  author: gilles;  state: Exp;  lines: +32 -41
+- Fixed bug about ssl and justconnect option
+- Cleaned connect code.
+- Started gmail support.
+----------------------------
+revision 1.260
 date: 2008/08/13 03:14:14;  author: gilles;  state: Exp;  lines: +54 -13
 - Added option --idatefromheader :
   sets the internal dates on host2 same as the "Date:" headers.
